about us & edit contact

--- a/src/app/core/product-feature/about-us/about-us.component.html
+++ b/src/app/core/product-feature/about-us/about-us.component.html
@@ -1,117 +1,128 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-12 gradient">
-      <h2 class="p-5  text-center">Our Vision</h2>
-      <p class="h4 p-5 pt-3 lh-base text-center">
-        Our special taste with our perfect service will position us as a chain
-        restarunt with the global presence
-      </p>
-    </div>
+<section>
+  <div class="text-center p-5 d-flex ">
+    <h2 class="mt-5 fs-4 "><i class="far fa-clock"> Working Hours <span class="ms-3 text-white ">Sat - Fri: 9:00 AM -
+          2:00 PM</span></i></h2>
   </div>
 
-  <div class="row">
-    <div class="col-12">
-      <h2 class="p-5 orange text-center">Our Products</h2>
-      <p class="h4 p-5  pt-3  lh-base black text-center">
-        We prepare and cook the fresh chicken in our mix and the delicious
-        sandwich with a selection of special sauces. We stand out and make our
-        own desserts daily with a combination of delicious Nautilus chocolate
-        cakes and fresh cakes. We have an excellent selection of delicious side
-        dishes also served with soft drinks.
-      </p>
+  <div id="carouselExampleCaptions" class="carousel slide my-auto" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
     </div>
+    <div class="carousel-inner">
+
+      <!-- 1st -->
+      <div class="carousel-item active">
+        <div class=" text-center">
+          <h2 class="my-5 ll">Our Vision</h2>
+          <p class="space"> Our restaurant strives to become our customers' favorite
+            place to eat and drink.</p>
+        </div>
+      </div>
+
+      <!-- 2nd -->
+      <div class="carousel-item">
+        <div class=" text-center">
+          <h2 class="my-5 ll">Our Values</h2>
+          <p class="space">
+            Whatever you do, do with Integrity .. Wherever you go, go as a Leader.<br>
+
+            Whomever you serve, serve with Caring .. Whenever you dream, dream with your All.<br>
+
+            And never, ever give up.</p>
+        </div>
+      </div>
+
+      <!-- 3rd -->
+      <div class="carousel-item">
+        <div class=" text-center">
+          <h2 class="my-5 ll">Our Mission</h2>
+          <p class="space"> To deliver a unique experience to our customers <br> through delivering great food,
+            friendly, attentive service and excellent price.</p>
+        </div>
+      </div>
+    </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
 
-  <div class="row">
-    <div class="col-12 gradient">
-      <h2 class="p-5 text-center">Objectives</h2>
-      <p class="h4 p-5  pt-3  lh-base text-center">
-        for the first year of operations are "Become selected as the " Best new
-        restarunt in the area by the local restaurant guide .
-      </p>
-    </div>
+
+  <!-- Chef section -->
+  <div class="text-center">
+    <h2 class="my-5">Our Proffesional Chefs</h2>
   </div>
 
-  <div class="row">
-    <div class="col-12">
-      <h2 class="p-5 orange text-center">Keys to Success</h2>
-      <p class="h4 p-5  pt-3 lh-base black text-center">
-        The Keys to success will be restaurant design that will be both visually
-        attractive to customers and designed for fast and efficient operations
-        Employee training to insure the best chicken preparation techniques
-        Marketing strategies aimed to build a solid base of loyal customers as
-        well as maximizing the sales of high margin products
-      </p>
+  <div class="container-fluid p-5">
+    <div class="row justify-content-center">
+
+      <div class="col-md-3">
+        <div class="chef">
+          <div class="item-medium-1__image image image--circle" [style]="'background-image:url(assets/img/chef3.jpg)'">
+          </div>
+          <div class="chef-info">
+            <h4>chef a.</h4>
+            <span>Master Chef</span>
+            <div class="social">
+              <a href=""><i class="fab fa-twitter"></i></a>
+              <a href=""><i class="fab fa-facebook"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-linkedin"></i></a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="col-md-3 mx-4">
+        <div class="chef">
+          <div class="item-medium-1__image image image--circle" [style]="'background-image:url(assets/img/chef1.jpg)'">
+          </div>
+          <div class="chef-info">
+            <h4>chef b.</h4>
+            <span>Master Chef</span>
+            <div class="social">
+              <a href=""><i class="fab fa-twitter"></i></a>
+              <a href=""><i class="fab fa-facebook"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-linkedin"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 text-black">
+        <div class="chef">
+          <div class="item-medium-1__image image image--circle" [style]="'background-image:url(assets/img/chef2.jpg)'">
+          </div>
+          <div class="chef-info">
+            <h4>chef c.</h4>
+            <span>Master Chef</span>
+            <div class="social">
+              <a href=""><i class="fab fa-twitter"></i></a>
+              <a href=""><i class="fab fa-facebook"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-linkedin"></i></a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
     </div>
+
   </div>
 
-  <div class="row">
-    <div class="col-12 gradient">
-      <h2 class="p-5 text-center">Our Mission</h2>
-      <p class="h4 p-5 pt-3  lh-base text-center">
-        Our Mission is to accomplish these goals .Best service with best quality
-        products Healthy and advance environment which people and connect
-        diverse perspectives Provide different offer for customer satisfaction .
-      </p>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="col-12">
-      <h2 class="p-5 orange text-center">Future Plans</h2>
-      <p class="h4 p-5 pt-3  lh-base black text-center">
-        We Plan to be chain and open other branches in all over Egypt to spread
-        our best chicken taste
-      </p>
-    </div>
-  </div>
 
-  <div class="row">
-    <div  class="col-12 gradient">
-      <h2 class="p-5 text-center">Working hours </h2>
-      <table border="1">
-        <tr>
-          <th>Day</th>
-          <th>From</th>
-          <th>To</th>
-        </tr>
-        <tr>
-          <td>Saturday</td>
-          <td>12:00 am</td>
-          <td>10:00 pm</td>
-        </tr>
-        <tr>
-          <td>Sunday</td>
-          <td>12:00 am</td>
-          <td>10:00 pm</td>
-        </tr>
-        <tr>
-          <td>Monday</td>
-          <td>12:00 am</td>
-          <td>10:00 pm</td>
-        </tr>
-        <tr>
-          <td>Thursday</td>
-          <td>12:00 am</td>
-          <td>10:00 pm</td>
-        </tr>
-        <tr>
-          <td>Wednesday</td>
-          <td>12:00 am</td>
-          <td>10:00 pm</td>
-        </tr>
-        <tr>
-          <td>Tuesday</td>
-          <td>12:00 am</td>
-          <td>12:00 pm</td>
-        </tr>
-        <tr>
-          <td>Friday</td>
-          <td>12:00 am</td>
-          <td>12:00 pm</td>
-        </tr>
-      </table>
-    </div>
-  </div>
-  
-</div>
+</section>
