--- a/src/app/core/product-feature/about-us/about-us.component.scss
+++ b/src/app/core/product-feature/about-us/about-us.component.scss
@@ -1,30 +1,96 @@
-tr:nth-child(even) {background: #595C5F;color: #FFF;}
-tr:nth-child(odd) {background: #FFF}
-table{
-  font-size: 18px;
-  border-collapse: collapse;
-  width: 50%;
-  margin: auto;
-  margin-bottom: 3%;
+section {
+  background: rgba(0, 0, 0, 0.7);
+  background-image: url("../../../../assets/img/abt.jpg");
+  background-size: cover;
+  background-blend-mode: multiply;
+}
+
+p {
+  color: #FFF;
+}
+
+.carousel-item h2 {
+  color: #FFF;
+  text-decoration: overline underline wavy #ffb13bbd;
+  text-underline-position: under;
+  color: #ffb03b;
+  font-size: 28px;
+  font-weight: 600px;
+}
+
+.space {
+  margin-bottom: 8%;
+  margin-top: 5%;
+  font-size: 20px;
+}
+
+.chef {
   text-align: center;
-}
-  div.gradient{
-    background-image: linear-gradient(90deg,  #FF5E14 ,#595C5F)
-  }
-
- .black{
-   color: #595C5F;
- }
-  p{
-    color:#FFF;
-}
-h2{
-color: #FFF;
-text-decoration: underline;
+  margin-bottom: 80px;
+  position: relative;
 }
 
-.orange{
-  color: #FF5E14;
+.chef-info {
+  position: absolute;
+  bottom: -15px;
+  left: 20px;
+  right: 20px;
+  background: #fff;
+  padding: 20px 0;
+  color: #433f39;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: max-height 0.5s ease-in-out;
 }
 
+.chef h4 {
+  font-weight: 500;
+  margin-bottom: 10px;
+  font-size: 18px;
+  color: #0a0a0a;
+  position: relative;
+  padding-bottom: 10px;
+  font-family: "Poppins", sans-serif;
+}
 
+.chef h4::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 50px;
+  height: 1px;
+  background: #ffcf88;
+  bottom: 0;
+  left: calc(50% - 25px);
+}
+
+.chef span {
+  font-style: italic;
+  display: block;
+  font-size: 14px;
+}
+
+.social {
+  margin-top: 15px;
+}
+
+.social a {
+  transition: color 0.3s;
+  color: #6c665c;
+}
+
+.social a:hover {
+  color: #ffb03b;
+}
+
+.social i {
+  font-size: 16px;
+  margin: 0 2px;
+}
+
+h2 {
+  color: #ffb03b;
+  font-size: 30px;
+  font-weight: 600px;
+  font-family: "Lucida Handwriting";
+}
