changing transaction status to paid and creating paid component and thanks component

--- a/src/app/core/product-feature/contact-us/contact-us.component.html
+++ b/src/app/core/product-feature/contact-us/contact-us.component.html
@@ -20,7 +20,7 @@
             <textarea class="form-control" name="message" placeholder="Leave a message here..." id="floatingTextarea2" style="height: 100px" ngModel></textarea>
             <label for="floatingTextarea2">Message</label>
           </div>
-        <button type="submit" class="btn my-5" >Send</button>
+        <button type="submit" class="btn my-5" routerLink="/thanks-for-contact-us" >Send</button>
       </form>
 </div>
 </div>
