--- a/src/app/core/product-feature/paid/paid.component.html
+++ b/src/app/core/product-feature/paid/paid.component.html
@@ -1,1 +1,16 @@
-<h1>paaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaid</h1>
+<div class="content" style="height: 70vh;">
+    <div class="wrapper-1">
+      <div class="wrapper-2">
+        <h1>Thank you !</h1>
+        <p>Thanks for subscribing to our Resturant.  </p>
+        <p>you should receive a confirmation email soon  </p>
+        <button class="go-home" routerLink="/home">
+        go home
+        </button>
+      </div>
+  </div>
+  </div>
+  
+  
+  
+  <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Source+Sans+Pro" rel="stylesheet">
