--- a/src/app/core/product-feature/contact-us/contact-us.component.html
+++ b/src/app/core/product-feature/contact-us/contact-us.component.html
@@ -22,6 +22,7 @@
           style="height: 100px" ngModel></textarea>
         <label for="floatingTextarea2">Message</label>
       </div>
-      <button type="submit" class="btn my-4" routerLink="/thanks-for-contact-us">Send</button>
+      <!-- routerLink="/thanks-for-contact-us" -->
+      <button type="submit" class="btn my-4" >Send</button>
     </form>
   </div>
