--- a/src/app/core/product-feature/thanks-page/thanks-page.component.html
+++ b/src/app/core/product-feature/thanks-page/thanks-page.component.html
@@ -1,5 +1,4 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css
-">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 <div class="thankyoucontent">
     <div class="wrapper-1">
        <div class="wrapper-2">
