display notification and edit order in dashboard

--- a/src/app/admin/dashboard/contact/contact.component.scss
+++ b/src/app/admin/dashboard/contact/contact.component.scss
@@ -1,4 +1,7 @@
-
+body{
+  height: 100vh;
+  padding-top: 10%;
+}
 #customers {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
@@ -21,3 +24,5 @@
   background-color:#FF5E14 ;
   color: white;
 }
+
+
