--- a/src/app/admin/dashboard/order/order.component.html
+++ b/src/app/admin/dashboard/order/order.component.html
@@ -45,7 +45,7 @@
               </table>
             </div>
             <div class="col-lg-6">
-              <table>
+              <table class="margin-r">
                 <tr>
                  <th><div class="cart_item_name cart_info_col ms-5 text-center">
                   <div class="cart_item_title">Created at</div>
